--- a/resume.tex
+++ b/resume.tex
@@ -6,7 +6,7 @@
 % Enable hyperlinks
 \setupinteraction[state=start, color=middleblue]
 
-\setuppapersize [letter][letter]
+\setuppapersize [letter][letter]  
 \setuplayout    [width=middle,  backspace=1.5in, cutspace=1.5in,
                  height=middle, topspace=0.75in, bottomspace=0.75in]
 
@@ -16,12 +16,9 @@
 
 \setupwhitespace[medium]
 
-\setuphead[chapter]      [style=\tfd]
-\setuphead[section]      [style=\tfc]
-\setuphead[subsection]   [style=\tfb]
-\setuphead[subsubsection][style=\bf]
-
-\setuphead[chapter, section, subsection, subsubsection][number=no]
+\setuphead[section]      [style=\tfc,number=no]
+\setuphead[subsection]   [style=\tfb,number=no]
+\setuphead[subsubsection][style=\bf,number=no]
 
 \definedescription
   [description]
@@ -29,9 +26,6 @@
 
 \setupitemize[autointro]    % prevent orphan list intro
 \setupitemize[indentnext=no]
-
-\setupfloat[figure][default={here,nonumber}]
-\setupfloat[table][default={here,nonumber}]
 
 \setupthinrules[width=15em] % width of horizontal rules
 
@@ -45,317 +39,114 @@
 
 \starttext
 
-\section[stephen-tudor]{Stephen Tudor}
+\section[chris-shelhorse]{CHRIS SHELHORSE}
 
-\subsection[front-end-web-developer]{Front-end Web Developer}
+Contact me by {[}email{]} {[}{]} for more information, or to arrange a
+time to talk {[}email{]}: mailto:shelhorse@gmail.com (email) {[}map{]}:
+http://bit.ly/1tHl5j0 (map)
 
-\startitemize[packed]
-\item
-  Phone: \useURL[url1][tel://610-590-4484][][610-590-4484]\from[url1]
-\item
-  Email:
-  \useURL[url2][mailto:smt@stephentudor.com][][\hyphenatedurl{smt@stephentudor.com}]\from[url2]
-\item
-  Blog:
-  \useURL[url3][http://stephentudor.com][][stephentudor.com]\from[url3]
-\item
-  Github: \useURL[url4][http://github.com/smt][][smt]\from[url4]
-\item
-  Twitter:
-  \useURL[url5][http://twitter.com/tagsoup][][@tagsoup]\from[url5]
-\stopitemize
+\subsection[objective]{OBJECTIVE}
 
-\subsection[summary]{Summary}
+Professional IT Consultant with experience leading and managing
+projects, and knowledge of a wide variety of computer technologies
+seeking new opportunities. Winning combination of hard and soft skills.
+Valuable team player. Eager to transition back into the workforce after
+a break from business to spend time with family and travel the world
 
-I am an experienced front-end developer who has led development for
-multiple successful \$1MM+ projects. I am passionate about building high
-quality apps and user interfaces with modern web technologies. Through
-being conversant in server-side engineering, visual/UX design, and
-project management practices, I am able to execute end-to-end on a
-product or project.
+Currently located in {[}Dallas, TX{]} {[}map{]} and willing to travel,
+relocate, or work remotely
 
-\subsection[specialties]{Specialties}
+\subsection[summary]{SUMMARY}
 
-Authoring great user experiences with JavaScript, HTML, and CSS.
-Advocating for the open web. Managing and mentoring dev teams.
-Performing code reviews. Writing white papers and API documentation.
-Particating in the black art of software estimation. Drawing from a
-strong background in many diverse web technologies and frameworks.
+Broad knowledge of operating systems, development practices, and
+database technologies\crlf
+Expert analytical and problem solving skills\crlf
+Adept at managing hardware, software, and operating systems\crlf
+Versatile team player with experience using many development tools
 
-\subsection[experience]{Experience}
+\subsection[work-history]{WORK HISTORY}
 
-\subsubsection[ux-developer-at-ebay-enterprise]{{\bf UX Developer} at
-\useURL[url6][http://ebayenterprise.com][][eBay Enterprise]\from[url6]}
+\subsubsection[managing-consultant]{2005-2011: Managing Consultant}
 
-{\em November 2013 - Present}
+\subsubsubsection[ibm-lab-services-systems-and-technology-group]{IBM,
+Lab Services, Systems and Technology Group}
 
-As a member of the Solution Innovations team, I am creating a RWD
-pattern library as the system of record and living style guide for the
-next version of the Magento reference store. I also support sales
-activities by building and deploying various tools and services, such as
-a third-party JavaScript app that enables users to annotate any website
-with content authored in a WordPress blog.
+Led on-site efforts to deliver data warehouse systems used for Smart
+Analytics solutions\crlf
+Presented overviews of solution's hardware, network, and operating
+systems architecture\crlf
+Developed programs automating various systems-related tasks performed
+during deliveries\crlf
+Completed AIX health checks to ensure existing Smart Analytics solutions
+conformed to standards\crlf
+Trained client technical staff on AIX and IBM Power systems
+virtualization technologies
 
-\subsubsection[senior-software-engineer-at-epam-empathy-lab]{{\bf Senior
-Software Engineer} at \useURL[url7][http://epam.com/empathylab][][EPAM
-Empathy Lab]\from[url7]}
+\subsubsection[it-specialist]{2000-2005: IT Specialist}
 
-{\em December 2012 - November 2013} (1 year)
+\subsubsubsection[ibm-e-business-innovation-center-business-information-services]{IBM,
+e-business Innovation Center, Business Information Services}
 
-Championed a more collaborative process for responsive web design
-between the UX and development disciplines. Curated an internal static
-web framework and responsive pattern library to be used on multiple
-projects. Lead development on responsive prototypes for NBC Universal,
-DIRECTV, AIG, Lionsgate, and the USA Network.
+Developed scripts to manipulate data during migration from MySQL to
+Oracle at E*Trade\crlf
+Administered source code using CMVC (IBM's internal CM tool) for
+multiple projects\crlf
+Worked defects in existing Websphere Commerce Suite applications\crlf
+Managed development systems running AIX, Solaris, Linux, and Windows
+Server\crlf
+Managed applications on these systems, including IBM HTTPS, DB2, and
+Websphere Application Servers
 
-\subsubsection[senior-web-developer-at-empathy-lab]{{\bf Senior Web
-Developer} at \useURL[url8][http://empathylab.com][][Empathy
-Lab]\from[url8]}
+\subsubsection[programmer-analyst]{1997-2000: Programmer Analyst}
 
-{\em April 2010 - December 2012} (2 years 9 months)
+\subsubsubsection[ibm-federal-systems-division-global-services]{IBM,
+Federal Systems Division, Global Services}
 
-Created front-end web applications on tight deadlines for marquee
-clientele. Responsible for estimating work, vetting UX designs prior to
-development, developing key features, assisting team members on
-challenging sections of code, performing code reviews, and coordinating
-releases.
+Senior AIX System Support Specialist dedicated to help desk servicing US
+Forest Service contract\crlf
+Analyzed network and server operating systems and software problems as
+required\crlf
+Resolved problems with applications such as Netscape, Applix, Oracle,
+sendmail, and named\crlf
+Configured security credentials and secure file system access in a large
+nationally distributed computing environment
 
-\subsubsection[web-developer-at-empathy-lab]{{\bf Web Developer} at
-\useURL[url9][http://empathylab.com][][Empathy Lab]\from[url9]}
+\subsubsection[unix-systems-administrator]{1995-1997: UNIX Systems
+Administrator}
 
-{\em April 2009 - April 2010} (1 year 1 month)
+\subsubsubsection[old-dominion-university-office-of-computing-computer-services]{Old
+Dominion University, Office of Computing \& Computer Services}
 
-Authored standards-based HTML, CSS, and JavaScript for websites
-representing a broad range of internationally recognized brands: Sesame
-Street, Sprout, Lexmark, StrideRite, Walgreens, Verizon, Comcast, 21st
-Century Insurance, Liberty Global, American Red Cross.
+Managed UNIX servers \& serviced trouble tickets from engineering
+departments\crlf
+Processed \& Automated DNS change request submissions via Web app\crlf
+Verified and managed backups to tape for numerous servers\crlf
+Managed fulfillment of university students email accounts
 
-\subsubsection[it-director-at-artisan-custom-doorworks]{{\bf IT
-Director} at \useURL[url10][http://artisandoorworks.com][][Artisan
-Custom Doorworks]\from[url10]}
+\subsection[education-training]{EDUCATION \& TRAINING}
 
-{\em December 2005 - April 2009} (3 years 5 months)
+2014: Engineering Software as a Service, UC BerkeleyX (edX)\crlf
+2013: Intro to Python, Rice University (Cousera)\crlf
+2001: Java Mobilization, IBM training on Java, EJB, JSP, and
+Websphere\crlf
+2001: Certified AIX Support Specialist\crlf
+2000: Firewalls and Perimeter Security\crlf
+\#\#\#\# 2001: Virginia Polytechnical Institute, Graduate-level CS
+courses - Theory of Programming Languages - Data Structures \&
+Algorithms in C++\crlf
+\#\#\#\# 1995-1997: Old Dominion University, Graduate-level CS courses -
+Advanced Computer Architecture - Web Programming\crlf
+\#\#\#\# 1995-1997: Old Dominion University, Undergraduate-level CS
+courses - Computer Networks - Discrete Structures - Operating Systems -
+Introduction to C++ - Database Fundamentals - Data Structures in C++ -
+Software Engineering - Object-Oriented Programming in C++\crlf
+\#\#\#\# 1995-1997: Old Dominion University, Bachelor of Science
+(Psychology)
 
-Designed the corporate website with a library of over 8,000 searchable
-PDF docemunts. Developed in-house sales and management application in
-Rails, while supporting and customizing business systems and
-applications.
+\subsection[references]{REFERENCES}
 
-\subsubsection[president-at-tudor-studio]{{\bf President} at
-\useURL[url11][http://tudorstudio.com][][Tudor Studio]\from[url11]}
-
-{\em January 2002 - Present}
-
-Providing professional web consulting and development services, from
-individuals and small businesses to Fortune 500 companies. Designing and
-developing hosted web applications with open source frameworks like Ruby
-on Rails. Integrating CMS and eCommerce applications.
-
-\subsection[skills-expertise]{Skills & Expertise}
-
-These are languages, tools, and practices to which I have had exposure
-over the past 6 years or so. Those things which enjoy routine usage in
-my daily work are denoted with a \high{†} symbol.
-
-\subsubsection[programming-languages]{Programming Languages}
-
-\startitemize[packed]
-\item
-  \useURL[url12][http://developer.mozilla.org/en/JavaScript][][JavaScript]\from[url12]\high{†}
-\item
-  \useURL[url13][http://php.net][][PHP]\from[url13]
-\item
-  \useURL[url14][http://ruby-lang.org][][Ruby]\from[url14]\high{†}
-\stopitemize
-
-\subsubsection[markuptemplating-languages-preprocessors]{Markup/Templating
-Languages & Preprocessors}
-
-\startitemize[packed]
-\item
-  \useURL[url15][http://coffeescript.org][][CoffeeScript]\from[url15]
-\item
-  \useURL[url16][http://www.w3.org/Style/CSS/Overview.en.html][][CSS]\from[url16]\high{†}
-\item
-  \useURL[url17][http://linkedin.github.io/dustjs][][Dust.js]\from[url17]
-\item
-  \useURL[url18][http://en.wikipedia.org/wiki/ERuby][][ERB/eRuby]\from[url18]
-\item
-  \useURL[url19][http://haml.info][][Haml]\from[url19]
-\item
-  \useURL[url20][http://handlebarsjs.com][][Handlebars.js]\from[url20]
-\item
-  \useURL[url21][http://developers.whatwg.org][][HTML]\from[url21]\high{†}
-\item
-  \useURL[url22][http://jade-lang.com][][Jade]\from[url22]
-\item
-  \useURL[url23][http://www.oracle.com/technetwork/java/javaee/jsp][][JSP]\from[url23]
-\item
-  \useURL[url24][http://docs.oracle.com/javaee/5/tutorial/doc/bnakc.html][][JSTL]\from[url24]
-\item
-  \useURL[url25][http://lesscss.org][][LESS]\from[url25]\high{†}
-\item
-  \useURL[url26][http://liquidmarkup.org][][Liquid]\from[url26]
-\item
-  \useURL[url27][http://daringfireball.net/projects/markdown][][Markdown]\from[url27]\high{†}
-\item
-  \useURL[url28][http://mustache.github.io][][Mustache]\from[url28]
-\item
-  \useURL[url29][http://sass-lang.com][][Sass]\from[url29]\high{†}
-\item
-  \useURL[url30][http://smarty.net][][Smarty]\from[url30]
-\item
-  \useURL[url31][http://paularmstrong.github.io/swig][][Swig]\from[url31]
-\item
-  \useURL[url32][http://learnboost.github.io/stylus][][Stylus]\from[url32]
-\stopitemize
-
-\subsubsection[frameworks-apis]{Frameworks & APIs}
-
-\startitemize[packed]
-\item
-  \useURL[url33][http://backbonejs.org][][Backbone.js]\from[url33]\high{†}
-\item
-  \useURL[url34][http://bower.io][][Bower]\from[url34]
-\item
-  \useURL[url35][http://browserify.org][][Browserify]\from[url35]\high{†}
-\item
-  \useURL[url36][http://compass-style.org][][Compass]\from[url36]\high{†}
-\item
-  \useURL[url37][http://www.djangoproject.com][][Django]\from[url37]
-\item
-  \useURL[url38][http://expressjs.com][][Express]\from[url38]\high{†}
-\item
-  \useURL[url39][http://jasmine.github.io][][Jasmine]\from[url39]
-\item
-  \useURL[url40][http://jquery.com][][jQuery]\from[url40]\high{†}
-\item
-  \useURL[url41][http://krakenjs.com][][krakenjs]\from[url41]
-\item
-  \useURL[url42][http://lodash.com][][Lodash]\from[url42]\high{†}
-\item
-  \useURL[url43][http://meteor.com][][Meteor]\from[url43]
-\item
-  \useURL[url44][http://middlemanapp.com][][Middleman]\from[url44]
-\item
-  \useURL[url45][http://nodejs.org][][Node.js]\from[url45]\high{†}
-\item
-  \useURL[url46][http://prototypejs.org][][Prototype.js]\from[url46]
-\item
-  \useURL[url47][http://facebook.github.io/react][][React]\from[url47]
-\item
-  \useURL[url48][http://requirejs.org][][Require.js]\from[url48]\high{†}
-\item
-  \useURL[url49][http://rubyonrails.org][][Ruby on Rails]\from[url49]
-\item
-  \useURL[url50][http://sinatrarb.com][][Sinatra]\from[url50]
-\item
-  \useURL[url51][http://dev.twitter.com][][Twitter API]\from[url51]
-\item
-  \useURL[url52][http://underscorejs.org][][Underscore.js]\from[url52]\high{†}
-\item
-  \useURL[url53][http://wordpress.org][][Wordpress]\from[url53]
-\item
-  \useURL[url54][http://developer.yahoo.com/yui][][YUI]\from[url54]
-\stopitemize
-
-\subsubsection[software-tools]{Software & Tools}
-
-\startitemize[packed]
-\item
-  \useURL[url55][http://www.adobe.com/products/creativesuite.html][][Adobe
-  Creative Suite]\from[url55]\high{†}
-\item
-  \useURL[url56][http://aws.amazon.com][][Amazon Web
-  Services]\from[url56]
-\item
-  \useURL[url57][http://apache.org][][Apache]\from[url57]\high{†}
-\item
-  \useURL[url58][http://developer.apple.com][][Apple XCode]\from[url58]
-\item
-  \useURL[url59][http://demandware.com][][Demandware]\from[url59]
-\item
-  \useURL[url60][http://git-scm.com][][Git]\from[url60]\high{†}
-\item
-  \useURL[url61][http://gruntjs.com][][Grunt]\from[url61]\high{†}
-\item
-  \useURL[url62][http://gulpjs.com][][Gulp]\from[url62]\high{†}
-\item
-  \useURL[url63][http://jboss.org][][JBoss]\from[url63]
-\item
-  \useURL[url64][http://atlassian.com/software/jira][][JIRA]\from[url64]\high{†}
-\item
-  \useURL[url65][http://apple.com/macosx][][Mac OS
-  X]\from[url65]\high{†}
-\item
-  \useURL[url66][http://magento.com][][Magento]\from[url66]\high{†}
-\item
-  \useURL[url67][http://mongodb.org][][MongoDB]\from[url67]\high{†}
-\item
-  \useURL[url68][http://mysql.com][][MySQL]\from[url68]
-\item
-  \useURL[url69][http://wiki.nginx.org][][Nginx]\from[url69]
-\item
-  \useURL[url70][http://www.oracle.com/us/products/applications/web-commerce/atg][][Oracle
-  ATG]\from[url70]
-\item
-  \useURL[url71][http://johnmacfarlane.net/pandoc][][Pandoc]\from[url71]
-\item
-  \useURL[url72][http://postgresql.org][][PostgreSQL]\from[url72]
-\item
-  \useURL[url73][http://rvm.beginrescueend.com][][rvm]\from[url73]\high{†}
-\item
-  \useURL[url74][http://www.sublimetext.com][][Sublime Text]\from[url74]
-\item
-  \useURL[url75][http://svn.apache.org][][Subversion]\from[url75]
-\item
-  \useURL[url76][http://tmux.sourceforge.net][][tmux]\from[url76]\high{†}
-\item
-  \useURL[url77][http://tomcat.apache.com][][Tomcat]\from[url77]
-\item
-  \useURL[url78][http://ubuntu.com][][Ubuntu Linux]\from[url78]
-\item
-  \useURL[url79][http://vagrantup.com][][Vagrant]\from[url79]
-\item
-  \useURL[url80][http://www.vim.org][][Vim]\from[url80]\high{†}
-\item
-  \useURL[url81][http://virtualbox.org][][VirtualBox]\from[url81]\high{†}
-\item
-  \useURL[url82][http://jetbrains.com/webstorm][][WebStorm]\from[url82]
-\item
-  \useURL[url83][http://yeoman.io][][Yeoman]\from[url83]
-\item
-  \useURL[url84][http://www.zsh.org][][zsh]\from[url84]\high{†}
-\stopitemize
-
-\subsection[education]{Education}
-
-\useURL[url85][http://sju.edu][][Saint Joseph's University]\from[url85],
-Erivan K. Haub School of Business\crlf
-BS, Information Systems, 1996 - 2000
-
-\subsection[honors-and-awards]{Honors and Awards}
-
-{\em Unsung Hero}, Empathy Lab, May 2011\crlf
-A peer-awarded honor which I'll always be terribly proud to have won.
-
-\subsection[interests]{Interests}
-
-\startitemize[packed]
-\item
-  Being a dad and spending time with my family
-\item
-  Playing \useURL[url86][http://boardgamegeek.com/user/smtudor][][board
-  and card games]\from[url86] (and video games, too)
-\item
-  Making and listening to
-  \useURL[url87][http://www.rdio.com/people/smtudor][][music]\from[url87]
-\item
-  Watching and contributing to Open Source Software
-\stopitemize
-
-©2014 \useURL[url88][http://s17r.com/resume][][Stephen
-Tudor]\from[url88]. All rights reserved. Direct contact only desired
-(no~recruiters~please).
+References are available upon request\crlf
+{[}LinkedIn Profile{]} {[}LinkedIn{]}\crlf
+{[}LinkedIn{]}: http://www.linkedin.com/in/shelhorse (LinkedIn Profile)
 
 \stoptext
